[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/objects/ground_tilemap.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/agents/animal_herbivore.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/levels/scripts/model_master.gd" type="Script" id=3]
[ext_resource path="res://plot.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/levels/scripts/statistics.gd" type="Script" id=5]
[ext_resource path="res://scenes/species/species_base.tscn" type="PackedScene" id=6]

[node name="ModelMaster" type="Node"]
process_priority = -1
script = ExtResource( 3 )
plantsRegrowRate = 1
maxAutoTurn = 200

[node name="TileMap" parent="." instance=ExtResource( 1 )]
modulate = Color( 0.898039, 0.815686, 0.733333, 1 )
position = Vector2( 7.48195, 8.22863 )
tile_data = PoolIntArray( 0, 2, 0, 1, 1, 0, 2, 1, 0, 3, 1, 0, 4, 1, 0, 5, 1, 0, 6, 1, 0, 7, 1, 0, 8, 1, 0, 9, 1, 0, 10, 1, 0, 11, 1, 0, 65536, 1, 0, 65537, 2, 0, 65538, 1, 0, 65539, 1, 0, 65540, 1, 0, 65541, 1, 0, 65542, 1, 0, 65543, 1, 0, 65544, 1, 0, 65545, 1, 0, 65546, 1, 0, 65547, 1, 0, 131072, 1, 0, 131073, 1, 0, 131074, 2, 0, 131075, 1, 0, 131076, 1, 0, 131077, 1, 0, 131078, 1, 0, 131079, 1, 0, 131080, 1, 0, 131081, 1, 0, 131082, 1, 0, 131083, 1, 0, 196608, 1, 0, 196609, 1, 0, 196610, 1, 0, 196611, 2, 0, 196612, 1, 0, 196613, 1, 0, 196614, 1, 0, 196615, 1, 0, 196616, 1, 0, 196617, 1, 0, 196618, 1, 0, 196619, 1, 0, 262144, 1, 0, 262145, 1, 0, 262146, 1, 0, 262147, 1, 0, 262148, 2, 0, 262149, 1, 0, 262150, 1, 0, 262151, 1, 0, 262152, 1, 0, 262153, 1, 0, 262154, 1, 0, 262155, 1, 0, 327680, 1, 0, 327681, 1, 0, 327682, 1, 0, 327683, 1, 0, 327684, 1, 0, 327685, 2, 0, 327686, 1, 0, 327687, 1, 0, 327688, 1, 0, 327689, 1, 0, 327690, 1, 0, 327691, 1, 0, 393216, 1, 0, 393217, 1, 0, 393218, 1, 0, 393219, 1, 0, 393220, 1, 0, 393221, 1, 0, 393222, 1, 0, 393223, 1, 0, 393224, 1, 0, 393225, 1, 0, 393226, 1, 0, 393227, 1, 0, 458752, 1, 0, 458753, 1, 0, 458754, 1, 0, 458755, 1, 0, 458756, 1, 0, 458757, 1, 0, 458758, 1, 0, 458759, 1, 0, 458760, 1, 0, 458761, 1, 0, 458762, 1, 0, 458763, 1, 0, 524288, 1, 0, 524289, 1, 0, 524290, 1, 0, 524291, 1, 0, 524292, 1, 0, 524293, 1, 0, 524294, 1, 0, 524295, 1, 0, 524296, 1, 0, 524297, 1, 0, 524298, 1, 0, 524299, 1, 0, 589824, 1, 0, 589825, 1, 0, 589826, 1, 0, 589827, 1, 0, 589828, 1, 0, 589829, 1, 0, 589830, 1, 0, 589831, 1, 0, 589832, 1, 0, 589833, 1, 0, 589834, 1, 0, 589835, 1, 0, 655360, 1, 0, 655361, 1, 0, 655362, 1, 0, 655363, 1, 0, 655364, 1, 0, 655365, 1, 0, 655366, 1, 0, 655367, 1, 0, 655368, 1, 0, 655369, 1, 0, 655370, 1, 0, 655371, 1, 0, 720896, 1, 0, 720897, 1, 0, 720898, 1, 0, 720899, 1, 0, 720900, 1, 0, 720901, 1, 0, 720902, 1, 0, 720903, 1, 0, 720904, 1, 0, 720905, 1, 0, 720906, 1, 0, 720907, 1, 0 )

[node name="Statistics" type="Node" parent="."]
script = ExtResource( 5 )

[node name="Species" type="Node" parent="."]

[node name="Herbivore" parent="Species" instance=ExtResource( 6 )]
animalsPath = NodePath("../../Animals")
startingAnimals = 10
sectorScale = Vector2( 1, 2 )
drawSectorGrid = false
drawFrame = false
gridColor = Color( 0.796078, 0.556863, 0.368627, 1 )

[node name="Animal" parent="Species/Herbivore" instance=ExtResource( 2 )]
visible = false
specieName = "Rabbit"
maxAge = 20
energyBreedingCost = 20
energyFeedingGain = 4

[node name="Animals" type="Node" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -107.0
margin_top = -30.0
grow_horizontal = 0
grow_vertical = 0
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Reset" type="Button" parent="CanvasLayer/HBoxContainer"]
visible = false
margin_right = 80.0
margin_bottom = 30.0
rect_min_size = Vector2( 160, 60 )
text = "Reset"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Turn" type="Button" parent="CanvasLayer/HBoxContainer"]
margin_right = 160.0
margin_bottom = 60.0
rect_min_size = Vector2( 160, 60 )
text = "Turn"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="CanvasLayer"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -400.0
margin_bottom = 400.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="plot" parent="CanvasLayer/Control" instance=ExtResource( 4 )]
position = Vector2( 0, 250 )
scale = Vector2( 1, 1.5 )
data_path = NodePath("../../../Animals")
history_size = 390
scale_data = false
record_only_on_change = true
plot_size = Vector2( 400, 150 )
axis_line_width = 2
axis_line_color = Color( 1, 1, 1, 1 )
grid_divisions = Vector2( 10, 5 )
grid_width = 1
grid_color = Color( 1, 1, 1, 0.286275 )
plot_line_width = 2
plot_line_color = Color( 0.968627, 1, 0, 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true
[connection signal="pressed" from="CanvasLayer/HBoxContainer/Reset" to="." method="_on_Reset_pressed"]
[connection signal="pressed" from="CanvasLayer/HBoxContainer/Turn" to="." method="processTurn"]
[connection signal="timeout" from="Timer" to="." method="_processTimer"]
